# tinytemplate

./: Cargo.toml
src/: main.rs
templates/: error.html  index.html  user.html
