[package]
name = "tinytemplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tinytemplate = "1.1"
actix-web = "4.0.0-beta.21"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
